--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,12 +18,21 @@ a {
   box-sizing: border-box;
 }
 
+@media (prefers-color-scheme: light) {
+  html {
+    color-scheme: light;
+  }
+  body {
+    color: black;
+    background-color: white;
+  }
+}
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
   body {
     color: white;
-    background: black;
+    background: #17171b;
   }
 }
